--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,29 @@ body {
     padding: 20px;
 }
 
+header {
+    height: 75px;
+    width: 100%;
+    padding: 0 15px;
+    background: rebeccapurple;
+    color: white;
+    position: fixed;
+    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header img {
+    height: 60px;
+}
+
+header nav {
+    width: 15%;
+    padding-right: 3%;
+    display: flex;
+    justify-content: space-evenly;
+}
 h1 {
     margin: 15px 0px;
     font-size: 30px;
@@ -20,17 +43,26 @@ div {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
+    left: 75px;
+    bottom: 50px;
+    z-index: 1;
 }
 
 .fixed {
     background-image: url('https://media.makeameme.org/created/fixed.jpg');
     background-size: cover;
     background-position: center;
+    /* position: fixed;
+    /* bottom: 0px; */
+    /* top: 0px;
+    left: 0px; */
 }
 
 .absolute-parent {
     height: 250px;
     width: 250px;
+    position: relative;
 }
 
 .absolute-child {
@@ -39,6 +71,9 @@ div {
     background-size: contain;
     background-repeat: no-repeat;
     background-position-y: center;
+    position: absolute;
+    right: 20px;
+    bottom: 10px;
 }
 
 .sticky {
@@ -46,12 +81,30 @@ div {
     background-size: contain;
     background-repeat: no-repeat;
     background-position-y: center;
+    /* position: sticky;
+    top: 10px; */
 }
 
 .flexbox-examples {
     height: 75vh;
     box-sizing: border-box;
     border: 2px solid black;
+    display: flex;
+    /* flex-direction: row; */
+    /* flex-direction: row-reverse; */
+    /* flex-direction: column; */
+    /* flex-direction: column-reverse; */
+    flex-wrap: wrap;
+    /* flex-wrap: wrap-reverse; */
+    /* justify-content: flex-start;  */ /* default */
+    /* justify-content: flex-end; */
+    /* justify-content: center; */
+    /* justify-content: space-between; */
+    /* justify-content: space-around; */
+    justify-content: space-evenly;
+    /* align-items: flex-start; */
+    /* align-items: flex-end; */
+    align-items: center;
 }
 
 .flexbox-examples div {
@@ -65,4 +118,8 @@ div {
 
 .overflow-shadow-example {
     margin: 0 auto;
+    /* overflow: hidden; */
+    /* overflow: scroll; */
+    overflow-y: scroll;
+    box-shadow: 5px 5px 5px 2px black;
 }
